# Neural-Networks-in-Cpp

./: CMakeLists.txt
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
